--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon scr/index.js"
+    "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js"
   },
   "dependencies": {
-    "nodemon": "^3.1.11"
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1",
+    "mongoose": "^9.0.0" 
   },
   "devDependencies": {
-    "prettier": "^3.7.4"
+    "prettier": "^3.7.4",
+     "nodemon": "^3.1.11"
   }
 }
