--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "mongoose": "^9.0.0" 
+    "mongoose": "^9.0.0"
   },
   "devDependencies": {
-    "prettier": "^3.7.4",
-     "nodemon": "^3.1.11"
+    "nodemon": "^3.1.11",
+    "prettier": "^3.7.4"
   }
 }
